# friction-aware-racing

./: .gitignore  LICENSE  README.md
src/f1_final_project/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/f1_final_project/config/: friction_profiles.yaml
src/f1_final_project/include/: mpc_utils.hpp
src/f1_final_project/maps/: my_map.pgm  my_map.yaml
src/f1_final_project/scripts/: debug_node.py  debug_node_mpc.py  mpc_node.py  pure_pursuit_node.py  sensor_filtering.py  utils.py  waypoint_gen_node.py  waypoint_gen_node_mpc.py
src/f1_final_project/src/: pure_pursuit_node.cpp  surface_detection_node.cpp
src/f1_final_project/waypoints/: ice_waypoints.csv  ice_waypoints_bad.csv  ice_waypoints_mpc.csv  ice_waypoints_mpc_old.csv  ice_waypoints_old.csv  my_map_wp.csv
src/surface_classifier/: README.md  manifest_train.csv  manifest_val.csv  package.xml  setup.cfg  setup.py
src/surface_classifier/config/: classifier.yaml  friction_map.yaml
src/surface_classifier/launch/: classifier.launch.py  recorder.launch.py
src/surface_classifier/models/: classes.txt  surface_mnv3_fp16.trt
src/surface_classifier/scripts/: build_trt_engine.sh  convert_trt.py  export_onnx.py  make_pipeline_diagram.py  make_split.py  train.py  train_colab.ipynb
src/surface_classifier/surface_classifier/: classifier_node.py  friction_map.py  recorder_node.py  trt_classifier.py
